2013-04-29 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	On query, set the type property.

2013-04-29 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	Make type accessor, perfect name accessor, return better description.

2013-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSObject.m (description)
	Return name and ID as description.

2013-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Use hard-coded ID 012000000000000AAA to identify Master Record Type.

2013-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Remove csv writer method already in DBSoapCSV, completing separation.

2013-04-24 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	RecordTypes accessors.

	* DBSoap.m (describeSObject)
	Extend to interpret RecordTypes and execute a query on RecordTypes to get the developer names.

2013-04-23 Riccardo Mottola <rm@gnu.org>

	* DBProgress.h
	* DBProgress.m
	ProgressIndicator setter and update.

	* AppController.h
	* AppController.m
	* Resources/DataBasin.gorm
	ProgressIndicator for Query.

2013-04-14 Riccardo Mottola <rm@gnu.org>

	* AppController.m (executeUpdate)
	* DBSoap.m
	Clean up and write consistent error results even with missing data.

2013-04-13 Riccardo Mottola <rm@gnu.org>

	* AppController.m (executeUpdate)
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Return update results and write them to results.csv.

2013-04-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Remove dead code.

2013-04-04 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	progressMonitor infrastructure for delete.

2013-04-03 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Write Delete results to results.csv in the same directory as the source file.

2013-04-02 Riccardo Mottola <rm@gnu.org>

	* DBCVSWriter.[h,m] (formatOneLine)
	Allow a single-complex object at top-level, not just arrays

2013-03-15 Riccardo Mottola <rm@gnu.org>

	* DBSObject.[h,m]
	(removeField) added method.
